<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- App info -->
    <string name="app_name">Mod4SystemUI</string>
    <string name="app_description">various mod for SystemUI.</string>
    
     <!-- Preference screen -->
    <string name="pref_category_notif_title">Notification Panel</string>
    <string name="pref_use_qsmod_key">QucikSettings</string>
    <string name="pref_use_qsmod_title">QuickSetting Panel</string>
    <string name="pref_use_qsmod_summary">Move QuickSettings into Notification panel.</string>
    <string name="pref_show_qs_edit_button_key">ShowEdit</string>
    <string name="pref_show_qs_edit_button_title">Show Edit button</string>
    <string name="pref_show_qs_edit_button_summary">Show QuickSettings Edit button in Notification panel.</string>
    <string name="pref_qs_number_of_row_key">QSRowNum</string>
    <string name="pref_qs_number_of_row_key_index">QSRowNumIndex</string>
    <string name="pref_qs_number_of_row_title">Items in a Row</string>
    <string name="pref_qs_number_of_row_summary">Number of items in a row.(current: %s)</string>
    <string name="pref_qs_row_height_key">QSRowHeight</string>
    <string name="pref_qs_row_height_key_index">QSRowHeightIndex</string>
    <string name="pref_qs_row_height_title">Row Height</string>
    <string name="pref_qs_row_height_summary">Number of row height.(current: %s dip)</string>
    <string name="desc_qs_edit_button">Edit</string>
    <string name="btn_choose">choose</string>
    
    <string name="pref_category_recent_title">Recent apps screen</string>
    <string name="pref_use_recentmod_key">ShowRAMBarInRecent</string>
    <string name="pref_use_recentmod_title">RAM Bar</string>
    <string name="pref_use_recentmod_summary">Show RAM Bar in Recent apps screnn.</string>

    <string name="pref_category_wholescreenshot_title">Screen Shot</string>
    <string name="pref_use_wholescreenshot_key">EnableWholeScreenShot</string>
    <string name="pref_use_wholescreenshot_title">Whole screenshot</string>
    <string name="pref_use_wholescreenshot_summary">Add "Whole Screenshot" to power menu.</string>

    <string name="pref_category_network_title">Network</string>
    <string name="pref_use_wifibandselect_key">WifiBand</string>
    <string name="pref_use_wifibandselect_title">Wifi Band</string>
    <string name="pref_use_wifibandselect_summary">Show option for selecting frequency band of Wi-Fi in Wi-Fi settings.</string>

    <!-- Recent Panel mod -->
    <string name="service_background_processes"><xliff:g id="memory">%1$s</xliff:g> free</string>
    <string name="service_foreground_processes"><xliff:g id="memory">%1$s</xliff:g> used</string>

    <!-- Screenshot mod -->
    <string name="take_screenshot">Whole Screenshot</string>
    
</resources>