<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_category_notif_title" >
        <CheckBoxPreference
            android:key="@string/pref_use_qsmod_key"
            android:summary="@string/pref_use_qsmod_summary"
            android:title="@string/pref_use_qsmod_title" />

        <CheckBoxPreference
            android:key="@string/pref_show_qs_edit_button_key"
            android:summary="@string/pref_show_qs_edit_button_summary"
            android:title="@string/pref_show_qs_edit_button_title" />

        <Preference 
            android:key="@string/pref_qs_number_of_row_key"
            android:title="@string/pref_qs_number_of_row_summary"></Preference>

        <Preference 
            android:key="@string/pref_qs_row_height_key"
            android:title="@string/pref_qs_row_height_summary"></Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_recent_title" >
        <CheckBoxPreference
            android:key="@string/pref_use_recentmod_key"
            android:summary="@string/pref_use_recentmod_summary"
            android:title="@string/pref_use_recentmod_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_wholescreenshot_title" >
        <CheckBoxPreference
            android:key="@string/pref_use_wholescreenshot_key"
            android:summary="@string/pref_use_wholescreenshot_summary"
            android:title="@string/pref_use_wholescreenshot_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_network_title" >
        <CheckBoxPreference
            android:key="@string/pref_use_wifibandselect_key"
            android:summary="@string/pref_use_wifibandselect_summary"
            android:title="@string/pref_use_wifibandselect_title" />
    </PreferenceCategory>
    
</PreferenceScreen>